Docker/k8s/yde-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: yde-ui
  name: yde-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: yde-ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: yde-ui
    spec:
      containers:
        - image: dmissud/yde_ui:latest
          name: yde-ui
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
